@@ -1,10 +1,10 @@
-No filenames for weathermap_data
+DONE No filenames for weathermap_data
 Use weathermap_data in dsstats
-Docs for dsstats
+docs for dsstats
 Test groups fully
 Add cron settings?
 Converter for rrd to ds
-Add snmp_cache stuff to dsstats
+DONE Add snmp_cache stuff to dsstats
 
 
 WISHES
