@@ -1,0 +1,3 @@
+tr.wm_disabled { color: #ccc; }
+
+.wm_warning { padding:5px; width: 50%; border: 2px red solid; margin: 5px auto 15px auto; background-color: #fee; }
